// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Themed renders Text without crashing 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      undefined,
    ]
  }
>
  Test
</Text>
`;

exports[`Themed renders View without crashing 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#000",
        },
        undefined,
      ]
    }
  >
    Test
  </Text>
</View>
`;
